--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -10,6 +10,8 @@ Establish the base session lifecycle and host-control contract so every agent ap
 
 This stage resolves the primary gap from concern #1 (host-control underspecified) and lays schema foundations used by all later stages.
 
+This document is the normative source of truth for P2.1 session contracts. Later stages may extend behavior but must not redefine these base contracts.
+
 ## Why Multiple IDs
 
 We need four identity levels because they solve different problems:
@@ -52,9 +54,14 @@ This allows deterministic incrementing in reducer state while limiting UUID gene
 
 1. Define core SDK schemas under `aos.agent/*`:
    - `aos.agent/SessionId@1`
+   - `aos.agent/ProviderProfileId@1`
    - `aos.agent/RunId@1`
    - `aos.agent/TurnId@1`
    - `aos.agent/StepId@1`
+   - `aos.agent/ToolBatchId@1`
+   - `aos.agent/ToolCallStatus@1`
+   - `aos.agent/ActiveToolBatch@1`
+   - `aos.agent/RunLease@1`
    - `aos.agent/ReasoningEffort@1`
    - `aos.agent/SessionConfig@1`
    - `aos.agent/RunConfig@1`
@@ -66,11 +73,15 @@ This allows deterministic incrementing in reducer state while limiting UUID gene
 2. Define lifecycle states and transitions:
    - `Idle`, `Running`, `WaitingInput`, `Paused`, `Cancelling`, `Completed`, `Failed`, `Cancelled`
 3. Define control observation semantics:
-   - `steer`, `follow_up`, `pause`, `resume`, `cancel`
-4. Define epoch fences to ignore stale completions:
+   - `steer`, `follow_up`, `pause`, `resume`, `cancel`, `lease_heartbeat`
+4. Define determinism fences to ignore stale completions:
    - `session_epoch`
    - `step_epoch`
-5. Add crate scaffolding:
+   - lease fence (`RunLease@1` + heartbeat checks)
+5. Define parallel fan-out/fan-in settle semantics:
+   - one active tool batch per tool round,
+   - no next LLM step until batch settled.
+6. Add crate scaffolding:
    - `crates/aos-agent-sdk` with shared types and reducer helper traits.
 
 ## Proposed Schema Shapes (AIR-style)
@@ -84,6 +95,14 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
   "$kind": "defschema",
   "name": "aos.agent/SessionId@1",
   "type": { "uuid": {} }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/ProviderProfileId@1",
+  "type": { "text": {} }
 }
 ```
 
@@ -148,7 +167,9 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
   "name": "aos.agent/SessionConfig@1",
   "type": {
     "record": {
-      "provider_profile_id": { "option": { "text": {} } },
+      "provider_profile_id": {
+        "option": { "ref": "aos.agent/ProviderProfileId@1" }
+      },
       "provider": { "option": { "text": {} } },
       "model": { "option": { "text": {} } },
       "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
@@ -169,7 +190,9 @@ They remain separate schema names because they have different lifecycle meaning:
   "name": "aos.agent/RunConfig@1",
   "type": {
     "record": {
-      "provider_profile_id": { "option": { "text": {} } },
+      "provider_profile_id": {
+        "option": { "ref": "aos.agent/ProviderProfileId@1" }
+      },
       "provider": { "text": {} },
       "model": { "text": {} },
       "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
@@ -214,7 +237,13 @@ They remain separate schema names because they have different lifecycle meaning:
           "FollowUp": { "record": { "text": { "text": {} } } },
           "Pause": { "unit": {} },
           "Resume": { "unit": {} },
-          "Cancel": { "record": { "reason": { "option": { "text": {} } } } }
+          "Cancel": { "record": { "reason": { "option": { "text": {} } } } },
+          "LeaseHeartbeat": {
+            "record": {
+              "lease_id": { "uuid": {} },
+              "heartbeat_at": { "time": {} }
+            }
+          }
         }
       }
     }
@@ -231,6 +260,74 @@ They remain separate schema names because they have different lifecycle meaning:
 - If `target_run_id` is present: apply only if it matches the active run, otherwise reject as stale/invalid target.
 - If `target_run_id` is absent: apply to current active run (best-effort convenience path).
 - If `expected_session_epoch` is present: apply only when it matches current session epoch.
+- `LeaseHeartbeat` must target the active run lease and match `active_run_lease.lease_id`; non-matching lease ids are rejected and logged.
+
+### Parallel tool batch and lease schemas
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/ToolBatchId@1",
+  "type": {
+    "record": {
+      "step_id": { "ref": "aos.agent/StepId@1" },
+      "batch_seq": { "nat": {} }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/ToolCallStatus@1",
+  "type": {
+    "variant": {
+      "Pending": { "unit": {} },
+      "Succeeded": { "unit": {} },
+      "Failed": { "record": { "code": { "text": {} }, "detail": { "text": {} } } },
+      "IgnoredStale": { "unit": {} },
+      "Cancelled": { "unit": {} }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/ActiveToolBatch@1",
+  "type": {
+    "record": {
+      "tool_batch_id": { "ref": "aos.agent/ToolBatchId@1" },
+      "issued_at_step_epoch": { "nat": {} },
+      "expected_call_ids": { "set": { "text": {} } },
+      "call_status": {
+        "map": {
+          "key": { "text": {} },
+          "value": { "ref": "aos.agent/ToolCallStatus@1" }
+        }
+      },
+      "results_ref": { "option": { "hash": {} } }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/RunLease@1",
+  "type": {
+    "record": {
+      "lease_id": { "uuid": {} },
+      "issued_at": { "time": {} },
+      "expires_at": { "time": {} },
+      "heartbeat_timeout_secs": { "nat": {} }
+    }
+  }
+}
+```
 
 ### Session State
 
@@ -252,6 +349,11 @@ They remain separate schema names because they have different lifecycle meaning:
       "active_run_config": { "option": { "ref": "aos.agent/RunConfig@1" } },
       "active_turn_id": { "option": { "ref": "aos.agent/TurnId@1" } },
       "active_step_id": { "option": { "ref": "aos.agent/StepId@1" } },
+      "active_tool_batch": { "option": { "ref": "aos.agent/ActiveToolBatch@1" } },
+      "in_flight_effects": { "nat": {} },
+      "max_in_flight_effects": { "nat": {} },
+      "active_run_lease": { "option": { "ref": "aos.agent/RunLease@1" } },
+      "last_heartbeat_at": { "option": { "time": {} } },
       "pending_steer": { "list": { "text": {} } },
       "pending_follow_up": { "list": { "text": {} } },
       "created_at": { "time": {} },
@@ -317,6 +419,38 @@ Model/provider can change within a session, but only at run boundaries:
 4. `active_run_config.provider` and `active_run_config.model` are immutable until run terminal state.
 5. Next run may use different resolved model/provider.
 
+## Deterministic Parallel Tool Batch Contract
+
+Agents may issue multiple tool calls in one step. The reducer must track one active
+batch per tool round and must not request the next LLM step until the batch is
+settled.
+
+Rules:
+
+1. A batch is settled only when every `expected_call_id` is in terminal `{Succeeded, Failed, IgnoredStale, Cancelled}`.
+2. Receipt ingestion order must not affect semantic `results_ref` ordering. Results are normalized by call id order.
+3. Reducer may advance to next LLM step only after batch settled.
+
+## Pause / Resume / Cancel Semantics with In-Flight Effects
+
+These rules are mandatory:
+
+1. `Pause` transitions `Running -> Paused` only at a step boundary.
+2. While `Paused`, no new effect intents are emitted.
+3. In-flight receipts during `Paused` are accepted and journaled, and only mutate active batch status.
+4. `Resume` transitions `Paused -> Running` and continues from reducer state without replaying already-settled call ids.
+5. `Cancel` transitions `Running|Paused -> Cancelling`, increments both `session_epoch` and `step_epoch`, and blocks new effect intents.
+6. After `Cancelling`, terminal transition to `Cancelled` occurs when all in-flight call ids are terminal or ignored stale.
+7. Any receipt tagged with stale `(run_id, session_epoch, step_epoch)` is recorded for audit and marked `IgnoredStale`.
+
+## Long-Run Liveness and Lease Fence
+
+Long-running autonomous runs must use lease fencing:
+
+1. Host must renew lease before `expires_at` via `HostCommand.LeaseHeartbeat`.
+2. If lease expires, reducer transitions to `Cancelling` with reason `lease_expired`.
+3. Lease checks are deterministic: compare journaled `heartbeat_at` from command payload, never wall clock.
+
 ## Runtime Use of IDs (example timeline)
 
 Given `session_id = "550e8400-e29b-41d4-a716-446655440000"`:
@@ -329,9 +463,9 @@ Given `session_id = "550e8400-e29b-41d4-a716-446655440000"`:
    - `step_id(..., step_seq:3)` for result ingestion
 4. Host issues cancel:
    - reducer sets lifecycle `Cancelling`
-   - increments `session_epoch`
-5. Late receipt from old step arrives with stale epoch:
-   - ignored deterministically.
+   - increments `session_epoch` and `step_epoch`
+5. Late receipt from old step arrives with stale fence values:
+   - recorded and marked `IgnoredStale`.
 
 This is why IDs and epochs are both needed:
 - IDs give lineage,
@@ -369,8 +503,9 @@ When the loop spec and AOS constraints differ, choose AOS invariants:
 
 ## Non-Goals
 
-- Provider-specific profile logic.
-- Tool bounding/truncation.
+- Provider profile resolution logic (handled in P2.2).
+- Tool output truncation/bounding policy (handled in P2.3).
+- Failure taxonomy ownership and retry strategy (handled in P2.5).
 - Streaming/event transport details.
 
 ## Deliverables
@@ -379,10 +514,13 @@ When the loop spec and AOS constraints differ, choose AOS invariants:
 2. `aos-agent-sdk` crate with:
    - core IDs and state/event types,
    - lifecycle transition helpers,
-   - command-queue semantics (`steer`, `follow_up`).
+   - command-queue semantics (`steer`, `follow_up`),
+   - active batch settle helpers,
+   - lease heartbeat/expiry helpers.
 3. Template keyed reducer and routing conventions:
    - key by `session_id`,
    - route `SessionEvent` to `SessionReducer`.
+4. Cross-stage contract notes for P2.2/P2.3/P2.5 so later stages extend but do not redefine base session semantics.
 
 ## Specs Alignment
 
@@ -395,170 +533,7 @@ When the loop spec and AOS constraints differ, choose AOS invariants:
 1. Deterministic no-tool run works end-to-end with lifecycle transitions.
 2. `steer` is observed at step boundary before next LLM step.
 3. `follow_up` is queued and consumed only after current run reaches `Idle`/`WaitingInput`.
-4. `cancel` transitions to `Cancelling` and ultimately `Cancelled`; stale late results are ignored by epoch fence.
-5. Replay test proves byte-identical final state for equivalent journal.
-
-## Normative Contract Update (Lock-In Addendum)
-
-The sections below are normative and override earlier ambiguities in this document.
-
-### Strongly typed profile identity in session/run config
-
-`provider_profile_id` must use `aos.agent/ProviderProfileId@1` instead of raw `text`.
-
-Updated shape:
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/SessionConfig@1",
-  "type": {
-    "record": {
-      "provider_profile_id": {
-        "option": { "ref": "aos.agent/ProviderProfileId@1" }
-      },
-      "provider": { "option": { "text": {} } },
-      "model": { "option": { "text": {} } },
-      "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
-      "max_tokens": { "option": { "nat": {} } }
-    }
-  }
-}
-```
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/RunConfig@1",
-  "type": {
-    "record": {
-      "provider_profile_id": {
-        "option": { "ref": "aos.agent/ProviderProfileId@1" }
-      },
-      "provider": { "text": {} },
-      "model": { "text": {} },
-      "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
-      "max_tokens": { "option": { "nat": {} } }
-    }
-  }
-}
-```
-
-### Explicit parallel tool fan-out / fan-in batch contract
-
-Agents may issue multiple tool calls in one step. The reducer must track one active
-batch per tool round and must not request the next LLM step until the batch is
-settled.
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/ToolBatchId@1",
-  "type": {
-    "record": {
-      "step_id": { "ref": "aos.agent/StepId@1" },
-      "batch_seq": { "nat": {} }
-    }
-  }
-}
-```
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/ToolCallStatus@1",
-  "type": {
-    "variant": {
-      "Pending": { "unit": {} },
-      "Succeeded": { "unit": {} },
-      "Failed": { "record": { "code": { "text": {} }, "detail": { "text": {} } } },
-      "IgnoredStale": { "unit": {} },
-      "Cancelled": { "unit": {} }
-    }
-  }
-}
-```
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/ActiveToolBatch@1",
-  "type": {
-    "record": {
-      "tool_batch_id": { "ref": "aos.agent/ToolBatchId@1" },
-      "issued_at_step_epoch": { "nat": {} },
-      "expected_call_ids": { "set": { "text": {} } },
-      "call_status": {
-        "map": {
-          "key": { "text": {} },
-          "value": { "ref": "aos.agent/ToolCallStatus@1" }
-        }
-      },
-      "results_ref": { "option": { "hash": {} } }
-    }
-  }
-}
-```
-
-`SessionState@1` additions:
-
-- `active_tool_batch: option<aos.agent/ActiveToolBatch@1>`
-- `in_flight_effects: nat`
-- `max_in_flight_effects: nat`
-
-Deterministic rules:
-
-1. A batch is settled only when every `expected_call_id` is in terminal
-   `{Succeeded, Failed, IgnoredStale, Cancelled}`.
-2. Receipt ingestion order must not affect semantic `results_ref` ordering.
-   Results are normalized by call id order.
-3. Reducer may advance to next LLM step only after batch settled.
-
-### Pause / resume / cancel semantics with in-flight effects
-
-These rules are mandatory:
-
-1. `Pause` transitions `Running -> Paused` only at a step boundary.
-2. While `Paused`, no new effect intents are emitted.
-3. In-flight receipts during `Paused` are accepted and journaled, and only mutate
-   active batch status.
-4. `Resume` transitions `Paused -> Running` and continues from reducer state
-   without replaying already-settled call ids.
-5. `Cancel` transitions `Running|Paused -> Cancelling`, increments both
-   `session_epoch` and `step_epoch`, and blocks new effect intents.
-6. After `Cancelling`, terminal transition to `Cancelled` occurs when all in-flight
-   call ids are terminal or ignored stale.
-7. Any receipt tagged with stale `(run_id, session_epoch, step_epoch)` is recorded
-   for audit and marked `IgnoredStale`.
-
-### Long-run liveness and lease fence
-
-Long-running autonomous runs must use lease fencing:
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/RunLease@1",
-  "type": {
-    "record": {
-      "lease_id": { "uuid": {} },
-      "issued_at": { "time": {} },
-      "expires_at": { "time": {} },
-      "heartbeat_timeout_secs": { "nat": {} }
-    }
-  }
-}
-```
-
-`SessionState@1` additions:
-
-- `active_run_lease: option<aos.agent/RunLease@1>`
-- `last_heartbeat_at: option<time>`
-
-Rules:
-
-1. Host must renew lease before `expires_at` via a control command.
-2. If lease expires, reducer transitions to `Cancelling` with reason
-   `lease_expired`.
-3. Lease checks are deterministic: compare journaled `time` from command payload,
-   never wall clock.
+4. Parallel tool fan-out/fan-in blocks next LLM step until active batch settles deterministically.
+5. `cancel` transitions to `Cancelling` and ultimately `Cancelled`; stale late results are recorded and marked `IgnoredStale`.
+6. Lease heartbeat renewal and lease-expiry cancellation path are deterministic from journaled command payloads.
+7. Replay test proves byte-identical final state for equivalent journal.
