--- a/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
@@ -82,15 +82,7 @@ This avoids unbounded top-level growth and makes precedence resolution explicit 
 
 ### Provider Profile Identity
 
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/ProviderProfileId@1",
-  "type": { "text": {} }
-}
-```
-
-`aos.agent/ReasoningEffort@1` is defined in P2.1 and reused here.
+`aos.agent/ProviderProfileId@1` and `aos.agent/ReasoningEffort@1` are defined in P2.1 and reused here.
 
 ```json
 {
@@ -157,7 +149,7 @@ This profile is intentionally thin.
   "name": "sys/LlmGenerateParams@1",
   "type": {
     "record": {
-      "provider_profile_id": { "text": {} },
+      "provider_profile_id": { "ref": "aos.agent/ProviderProfileId@1" },
       "provider": { "text": {} },
       "model": { "text": {} },
       "message_refs": { "list": { "hash": {} } },
