--- a/roadmap/v0.10-agent-sdk/p2.3-tool-loop-safety-context-bounds.md
+++ b/roadmap/v0.10-agent-sdk/p2.3-tool-loop-safety-context-bounds.md
@@ -9,6 +9,7 @@
 Lock down runtime safety and context discipline for tool-using agent loops.
 
 This stage resolves concerns #3 and #4.
+P2.1 remains the source of truth for base lease, batch, and pause/resume/cancel contracts; this stage adds limits/policy on top.
 
 ## Scope
 
@@ -27,11 +28,11 @@ This stage resolves concerns #3 and #4.
    - deterministic truncation marker with digest.
 4. Context pressure signaling:
    - standardized threshold events (for example 70/85/95%).
-5. Long-run liveness contract:
-   - run lease heartbeat,
-   - deterministic lease-expiry behavior.
-6. Parallel tool round settle contract:
-   - all-results fan-in barrier before next LLM step.
+5. Long-run liveness policy over the P2.1 lease contract:
+   - lease timeout thresholds,
+   - deterministic lease-expiry reaction policy.
+6. Parallel tool round pressure policy over the P2.1 settle contract:
+   - backpressure behavior as in-flight counts approach configured ceilings.
 
 ## Non-Goals
 
@@ -47,8 +48,8 @@ This stage resolves concerns #3 and #4.
    - `model_output_ref`
    - `truncation_meta`
 4. Deterministic truncation helper in `aos-agent-sdk`.
-5. Liveness helpers for lease heartbeat and expiry transitions.
-6. Batch-settle helpers for parallel tool rounds.
+5. Liveness policy helpers built on P2.1 lease primitives.
+6. Backpressure helpers built on P2.1 batch-settle primitives.
 
 ## Implementation Notes
 
