--- a/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
+++ b/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
@@ -9,6 +9,7 @@
 Define shared failure semantics so identical failures produce identical behavior across apps.
 
 This stage resolves concern #6 and finalizes cancellation semantics from concern #4.
+P2.1 remains the base source of truth for lifecycle and in-flight cancellation fences; this stage hardens taxonomy and retry ownership around that contract.
 
 ## Scope
 
@@ -56,10 +57,10 @@ This stage resolves concern #6 and finalizes cancellation semantics from concern
 - Plan retries own effect re-dispatch policy; reducer retries own state-transition policy.
 - At most one layer may retry a given failure class in a given path (single owner rule).
 
-### Cancellation sequence (normative)
+### Cancellation sequence (conformance; must match P2.1 contract)
 
 1. Host command accepted and journaled with `command_id`.
-2. Reducer transitions to `Cancelling` and bumps epoch fence.
+2. Reducer transitions to `Cancelling` and bumps both `session_epoch` and `step_epoch`.
 3. No new effect intents are emitted after transition to `Cancelling`.
 4. In-flight receipts are ingested:
    - matching epoch/run: mark call terminal (`Succeeded` or `Failed`),
