--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -83,6 +83,11 @@ This allows deterministic incrementing in reducer state while limiting UUID gene
    - no next LLM step until batch settled.
 6. Add crate scaffolding:
    - `crates/aos-agent-sdk` with shared types and reducer helper traits.
+   - keep SDK reducer/pure WASM modules in this crate (`src/bin/*`) for v0.10.
+   - keep reusable SDK AIR assets under `crates/aos-agent-sdk/air/`.
+7. Define the P2.1 execution harness boundary:
+   - use `crates/aos-smoke` fixtures for end-to-end lifecycle/concurrency validation.
+   - do not create a separate e2e runner in `aos-agent-sdk`.
 
 ## Proposed Schema Shapes (AIR-style)
 
@@ -167,11 +172,7 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
   "name": "aos.agent/SessionConfig@1",
   "type": {
     "record": {
-      "provider_profile_id": {
-        "option": { "ref": "aos.agent/ProviderProfileId@1" }
-      },
-      "provider": { "option": { "text": {} } },
-      "model": { "option": { "text": {} } },
+      "provider_profile_id": { "ref": "aos.agent/ProviderProfileId@1" },
       "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
       "max_tokens": { "option": { "nat": {} } }
     }
@@ -179,10 +180,9 @@ Below is the intended shape. Final field names can be adjusted, but the semantic
 }
 ```
 
-`SessionConfig@1` and `RunConfig@1` intentionally share the same field shape.
-They remain separate schema names because they have different lifecycle meaning:
-- `SessionConfig@1`: mutable defaults for future runs.
-- `RunConfig@1`: resolved immutable snapshot for one active run.
+`SessionConfig@1` is profile-first mutable defaults for future runs.
+`RunConfig@1` is the resolved immutable snapshot for one active run and includes concrete
+provider/model values derived at `RunStarted`.
 
 ```json
 {
@@ -190,9 +190,7 @@ They remain separate schema names because they have different lifecycle meaning:
   "name": "aos.agent/RunConfig@1",
   "type": {
     "record": {
-      "provider_profile_id": {
-        "option": { "ref": "aos.agent/ProviderProfileId@1" }
-      },
+      "provider_profile_id": { "ref": "aos.agent/ProviderProfileId@1" },
       "provider": { "text": {} },
       "model": { "text": {} },
       "reasoning_effort": { "option": { "ref": "aos.agent/ReasoningEffort@1" } },
@@ -414,10 +412,16 @@ They remain separate schema names because they have different lifecycle meaning:
 Model/provider can change within a session, but only at run boundaries:
 
 1. Session stores mutable defaults in `session_config`.
-2. `RunRequested.run_overrides` may override those defaults for the next run.
+2. `RunRequested.run_overrides` may replace those defaults for the next run.
 3. On `RunStarted`, reducer resolves and snapshots `active_run_config`.
 4. `active_run_config.provider` and `active_run_config.model` are immutable until run terminal state.
 5. Next run may use different resolved model/provider.
+
+Profile-first constraint:
+
+- Session and run request configuration choose `provider_profile_id`; they do not directly set provider/model.
+- Provider/model are resolved once at `RunStarted` and persisted only in `active_run_config`.
+- `RunRequested.run_overrides` is a full run-scoped config value, not a sparse patch.
 
 ## Deterministic Parallel Tool Batch Contract
 
@@ -516,11 +520,14 @@ When the loop spec and AOS constraints differ, choose AOS invariants:
    - lifecycle transition helpers,
    - command-queue semantics (`steer`, `follow_up`),
    - active batch settle helpers,
-   - lease heartbeat/expiry helpers.
+   - lease heartbeat/expiry helpers,
+   - SDK reducer/pure module binaries under `src/bin/*`,
+   - reusable AIR assets under `air/` for schemas/module defs/plan templates.
 3. Template keyed reducer and routing conventions:
    - key by `session_id`,
    - route `SessionEvent` to `SessionReducer`.
 4. Cross-stage contract notes for P2.2/P2.3/P2.5 so later stages extend but do not redefine base session semantics.
+5. P2.1 smoke fixture(s) under `crates/aos-smoke` covering lifecycle/control behavior with deterministic replay assertions.
 
 ## Specs Alignment
 
@@ -537,3 +544,4 @@ When the loop spec and AOS constraints differ, choose AOS invariants:
 5. `cancel` transitions to `Cancelling` and ultimately `Cancelled`; stale late results are recorded and marked `IgnoredStale`.
 6. Lease heartbeat renewal and lease-expiry cancellation path are deterministic from journaled command payloads.
 7. Replay test proves byte-identical final state for equivalent journal.
+8. P2.1 end-to-end coverage executes via `aos-smoke` fixtures (no separate SDK-local e2e runner).
