--- a/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-provider-profiles-llm-contract.md
@@ -12,6 +12,8 @@ This stage resolves concerns #2 (provider philosophy) and #7 (LLM contract press
 
 Because v0.10 accepts breaking changes, this stage replaces `sys/LlmGenerateParams@1` and `sys/LlmGenerateReceipt@1` in place instead of introducing parallel `@2` schemas.
 
+This document is the normative source of truth for P2.2 provider/LLM contracts.
+
 ## Why Provider Profiles Exist
 
 `provider + model` is not enough for reliable behavior. Different providers differ on:
@@ -35,11 +37,17 @@ Design split:
 1. Catalog (`catalog_models.json`):
    - runtime metadata and compatibility hints.
 2. AIR profile schema:
-   - world-pinned selection and defaults/overrides needed for deterministic behavior and audit.
+   - world-pinned selection and defaults/run overrides needed for deterministic behavior and audit.
 
 Key rule:
 
 Anything that affects cap/policy decisions or effect intent semantics must be explicit in `LlmGenerateParams` (and thus journaled), not hidden behind mutable host catalog lookups.
+
+Determinism boundary:
+
+1. Catalog lookup may validate compatibility and produce diagnostics only.
+2. Catalog lookup may not inject or mutate cap/policy-relevant values.
+3. If required resolved values are missing after applying run-scoped config and profile defaults, resolver must fail with typed validation error rather than infer host-side defaults.
 
 ## What This Stage Locks
 
@@ -67,14 +75,16 @@ Anything that affects cap/policy decisions or effect intent semantics must be ex
 
 ## Why Nested `runtime` in `LlmGenerateParams@1`
 
-With thin profiles, most per-call variation is runtime model args. Nesting keeps contracts clearer:
+With profile-first run-scoped configuration, nesting keeps contracts clearer:
 
 - top-level in `LlmGenerateParams@1`:
   - identity and determinism-critical routing/audit fields (`provider_profile_id`, `provider`, `model`, `message_refs`, `api_key`)
 - nested `runtime`:
-  - call-local knobs (`temperature`, optional `max_tokens`, `reasoning_effort`, tool/stop/options/format refs)
+  - step-local execution payload (`temperature`, optional `max_tokens`, `reasoning_effort`, tool/stop/options/format refs)
 
-This avoids unbounded top-level growth and makes precedence resolution explicit (`runtime` overrides > profile defaults).
+This keeps run-scoped configuration separate from step-scoped execution data.
+P2.2 does not define host/user step-level configuration overrides.
+Any step-local variation must come from deterministic reducer/plan logic and current step context.
 
 `provider` and `model` are intentionally not in `runtime` so they cannot drift mid-run as per P2.1 run-immutability rules.
 
@@ -164,9 +174,9 @@ Notes:
 
 - Keep `provider` and `model` explicit in params for cap enforcement, policy evaluation, and audit.
 - `provider_profile_id` ties the request to a profile-defined default/constraints bundle.
-- `runtime` groups per-call model args cleanly and avoids endless top-level field growth.
-- `provider` and `model` are resolved from run config and are fixed for the entire run.
-- `runtime.max_tokens` is optional; when absent, adapter passes no max-token override and provider defaults apply.
+- `runtime` groups step-local execution fields cleanly and avoids endless top-level field growth.
+- `provider`, `model`, and `provider_profile_id` are sourced from immutable active run config.
+- `runtime.max_tokens` is sourced from active run config when set; when unset, adapter passes no max-token override and provider defaults apply.
 
 ### LLM Receipt (replaced `@1`)
 
@@ -210,9 +220,36 @@ Notes:
 
 ## Normalized Output Envelope (`output_ref`)
 
-`output_ref` must point to a provider-agnostic JSON envelope in CAS, sufficient for reducers to parse tool calls without provider-specific branching.
+`output_ref` must point to a provider-agnostic typed envelope in CAS, sufficient for reducers to parse tool calls without provider-specific branching.
 
-Proposed schema:
+Canonical tool-call schema:
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/LlmToolCall@1",
+  "type": {
+    "record": {
+      "call_id": { "text": {} },
+      "tool_name": { "text": {} },
+      "arguments_ref": { "hash": {} },
+      "provider_call_id": { "option": { "text": {} } }
+    }
+  }
+}
+```
+
+```json
+{
+  "$kind": "defschema",
+  "name": "aos.agent/LlmToolCallList@1",
+  "type": { "list": { "ref": "aos.agent/LlmToolCall@1" } }
+}
+```
+
+`arguments_ref` must reference canonical JSON object payload in CAS. Reducers must never parse provider-specific argument strings.
+
+Envelope schema:
 
 ```json
 {
@@ -228,10 +265,14 @@ Proposed schema:
 }
 ```
 
-Tool-call entries (stored at `tool_calls_ref`) should carry:
-- stable call id,
-- canonical tool name,
-- normalized arguments JSON string or canonical arguments object.
+When `tool_calls_ref` is present, the referenced CAS payload must validate as
+`aos.agent/LlmToolCallList@1`.
+
+Parallel tool intent normalization:
+
+1. Adapter must preserve model-emitted call ids as `call_id`.
+2. Adapter must canonicalize call ordering by emitted sequence and include that sequence in serialized list order.
+3. Reducer must use `call_id` identity for idempotency and stale-result handling.
 
 `raw_output_ref` preserves full provider-native output for debug/audit.
 
@@ -264,24 +305,32 @@ Equivalent flow for Anthropic maps to `provider_options.anthropic.*` and Message
 
 ## Profile Resolution Semantics
 
-1. Reducer or plan chooses profile id.
-2. Profile resolver loads `ProviderProfile@1`.
-3. At run start, resolver computes concrete `provider` and `model` for the run.
-4. Reducer snapshots this as active run config (P2.1).
-5. For each LLM step in the run, resolver merges defaults and per-call overrides into `runtime` only.
-6. Capability checks still apply at effect boundary (`llm.basic` cap and policy).
-7. Adapter receives concrete fully-resolved request values.
+1. At run start, compute effective run request config from `RunRequested.run_overrides` when present, otherwise `session_config` defaults (P2.1).
+2. Profile resolver loads `ProviderProfile@1` using effective `provider_profile_id`; catalog lookup may validate compatibility and produce diagnostics only.
+3. Resolver computes concrete `provider` and `model` and applies run-scoped defaults for `reasoning_effort` and `max_tokens`.
+4. Reducer snapshots immutable `active_run_config` (P2.1) containing `{provider_profile_id, provider, model, reasoning_effort?, max_tokens?}`.
+5. For each LLM step, `LlmGenerateParams@1` is materialized from `active_run_config` plus deterministic step context (`message_refs`, tools, stop sequences, metadata, format refs).
+6. No host/user step-level config override path exists in P2.2.
+7. Capability checks still apply at effect boundary (`llm.basic` cap and policy).
+8. Adapter receives concrete fully-resolved request values.
+9. If required values remain unset after precedence resolution, resolver fails with typed validation error.
 
-Precedence order:
+Run-start precedence order:
 
-1. Explicit per-call runtime fields.
-2. Profile defaults.
-3. Host/catalog inferred defaults (non-critical hints only).
+1. `RunRequested.run_overrides` (run-scoped).
+2. `session_config` defaults.
+3. `ProviderProfile@1` defaults.
+4. No semantic defaults from host catalog/runtime.
+
+Step materialization rule:
+
+- Config-bearing fields (`provider_profile_id`, `provider`, `model`, `runtime.reasoning_effort`, `runtime.max_tokens`) must come from immutable `active_run_config`.
+- Step-local runtime fields may vary only from deterministic reducer/plan logic for that step.
 
 `max_tokens` rule:
 
-- If `runtime.max_tokens` is set, pass it through as request override.
-- If `runtime.max_tokens` is unset, leave unset and use provider/model default behavior.
+- If `active_run_config.max_tokens` is set, materialize it into `runtime.max_tokens`.
+- If `active_run_config.max_tokens` is unset, keep `runtime.max_tokens` unset and use provider/model default behavior.
 - Cap enforcer and policy logic must treat missing `max_tokens` as valid input.
 
 Only resolved values in `LlmGenerateParams@1` are authoritative for deterministic policy/cap and audit.
@@ -325,111 +374,8 @@ Provider-specific behavior belongs in profile and adapter layers; reducer-facing
 ## Exit Criteria
 
 1. OpenAI and Anthropic profiles pass the same core contract tests for no-tool and tool-call flows.
-2. Profile resolution (profile defaults + runtime overrides + catalog hints) works without app-level provider branching.
+2. Profile resolution (run-scoped overrides + session defaults + profile defaults + catalog validation diagnostics) works without app-level provider branching.
 3. `provider_options_ref` round-trip is verified from effect params to provider request.
 4. `output_ref` normalized envelope and `raw_output_ref` provider payload are both populated where available.
 5. `max_tokens` omitted path is covered and succeeds for supported models/providers.
 6. Replay parity preserved (no nondeterministic fields leak into reducer decisions).
-
-## Normative Contract Update (Determinism and Tool Call Canonicalization)
-
-The sections below are normative and override earlier ambiguities in this document.
-
-### Typed `provider_profile_id` in LLM params
-
-`sys/LlmGenerateParams@1.provider_profile_id` must reference
-`aos.agent/ProviderProfileId@1`.
-
-```json
-{
-  "$kind": "defschema",
-  "name": "sys/LlmGenerateParams@1",
-  "type": {
-    "record": {
-      "provider_profile_id": { "ref": "aos.agent/ProviderProfileId@1" },
-      "provider": { "text": {} },
-      "model": { "text": {} },
-      "message_refs": { "list": { "hash": {} } },
-      "runtime": { "ref": "sys/LlmRuntimeArgs@1" },
-      "api_key": { "option": { "ref": "sys/TextOrSecretRef@1" } }
-    }
-  }
-}
-```
-
-### Resolver determinism boundary
-
-To preserve replay parity, resolver behavior is constrained:
-
-1. Catalog lookup may validate compatibility and produce diagnostics only.
-2. Catalog lookup may not inject or mutate cap/policy-relevant values.
-3. Resolved `provider`, `model`, `runtime`, and profile id in effect params are
-   the only authoritative values for cap/policy decisions.
-4. If required values are absent after applying profile defaults and per-call
-   overrides, resolver must fail with typed validation error rather than infer
-   host-side defaults.
-
-Updated precedence:
-
-1. Explicit per-call runtime fields.
-2. Profile defaults.
-3. No semantic defaults from host catalog/runtime.
-
-### Canonical normalized tool-call schema
-
-`tool_calls_ref` must point to a typed list of canonical tool calls. Mixed
-representations ("JSON string or object") are not allowed.
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/LlmToolCall@1",
-  "type": {
-    "record": {
-      "call_id": { "text": {} },
-      "tool_name": { "text": {} },
-      "arguments_ref": { "hash": {} },
-      "provider_call_id": { "option": { "text": {} } }
-    }
-  }
-}
-```
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/LlmToolCallList@1",
-  "type": { "list": { "ref": "aos.agent/LlmToolCall@1" } }
-}
-```
-
-`arguments_ref` must reference canonical JSON object payload in CAS. Reducers must
-never parse provider-specific argument strings.
-
-Updated envelope:
-
-```json
-{
-  "$kind": "defschema",
-  "name": "aos.agent/LlmOutputEnvelope@1",
-  "type": {
-    "record": {
-      "assistant_text": { "option": { "text": {} } },
-      "tool_calls_ref": { "option": { "hash": {} } },
-      "reasoning_ref": { "option": { "hash": {} } }
-    }
-  }
-}
-```
-
-When `tool_calls_ref` is present, the referenced CAS payload must validate as
-`aos.agent/LlmToolCallList@1`.
-
-### Parallel tool intent normalization
-
-When a model returns multiple tool calls:
-
-1. Adapter must preserve model-emitted call ids as `call_id`.
-2. Adapter must canonicalize call ordering by emitted sequence and include that
-   sequence in serialized list order.
-3. Reducer must use `call_id` identity for idempotency and stale-result handling.
