--- a/roadmap/v0.10-agent-sdk/p2.6-conformance-and-demiurge-migration.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-conformance-and-demiurge-migration.md
@@ -27,10 +27,13 @@ This stage resolves concerns #8 and #9.
 2. Add replay-oriented end-to-end assertions:
    - journal replay from genesis,
    - byte-identical terminal state snapshots.
-3. Migrate Demiurge core flow to SDK contracts:
+3. Execute conformance via `crates/aos-smoke` as the single e2e runner:
+   - deterministic lane (default/CI),
+   - optional live-provider lane (real LLM calls, opt-in).
+4. Migrate Demiurge core flow to SDK contracts:
    - `demiurge/*` to `aos.agent/*` mapping,
    - keep short-term adapters only where needed.
-4. Ship at least one reusable sample world for parent/child orchestration.
+5. Ship at least one reusable sample world for parent/child orchestration.
 
 ## Non-Goals
 
@@ -39,15 +42,18 @@ This stage resolves concerns #8 and #9.
 
 ## Deliverables
 
-1. Conformance test harness under SDK/host integration tests.
+1. Conformance fixture suite in `crates/aos-smoke` (single e2e runner for SDK flows).
 2. Migration plan and cutover checklist for `apps/demiurge`.
 3. One headless sample world and one delegation sample world.
 4. Final P2 closure report against stage exit gates.
+5. Optional live-provider smoke job/profile documented with required env/credentials and provider matrix.
 
 ## Implementation Notes
 
 - Use existing Demiurge e2e patterns (`trace-get`, receipt/terminal checks) as starting fixtures.
 - Keep replay-or-die as non-negotiable acceptance criterion.
+- Deterministic lane is required for CI gating and uses reproducible adapters/fixtures.
+- Live-provider lane is opt-in and validates real-provider interop, but is not used for replay-parity gating.
 
 ## Exit Criteria
 
@@ -56,4 +62,4 @@ This stage resolves concerns #8 and #9.
 3. Parent/child session orchestration sample passes deterministic integration and replay tests.
 4. All prior stage exit criteria remain green after migration.
 5. P2 marked complete only after closure report is published.
-
+6. `aos-smoke` deterministic lane is green in CI; live-provider lane is available and documented as opt-in.
